--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/srcs/styles/navbar.css">
     <link rel="stylesheet" href="/srcs/styles/mainCont.css">
+    <link rel="stylesheet" href="/srcs/styles/products.css">
     <link rel="stylesheet" href="/srcs/styles/mainCont_side.css">
     <link rel="stylesheet" href="/srcs/styles/footer.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="nav">
@@ -50,49 +54,54 @@
                 <img src="/srcs/images/visual_img01_m.jpeg" alt="">
             </div>
             <img src="/srcs/images/visual_icon.png" alt="이미지를 찾을 수 없습니다." class="visual_icon">
-        </div>
-    </div>
-    <div id="News_Notice_m">
-        <div class="first_line">
-            <h5>NEWS & NOTICE</h5>
-            <img src="" alt="more">
-            <img src="" alt="prev">
-        </div>
-        <div class="second_line">
-            <p>동아 샤프심 변경 본수입 안내</p>
-            <P class="day">[2020-04-06]</P>
-            <img src="" alt="next">
+            <div class="News_Notice_m">
+                <div class="first_line">
+                    <h4>NEWS & NOTICE</h4>
+                    <img src="/srcs/images/news_more.gif" alt="more" class="more">
+                    <img src="/srcs/images/up.png" alt="prev" class="up">
+                </div>
+                <div class="second_line">
+                    <p>동아 샤프심 변경 본수입 안내</p>
+                    <P class="day">[2020-04-06]</P>
+                    <img src="/srcs/images/down.png" alt="next" class="down">
+                    <img src="/srcs/images/arrow.png" alt="" class="arrow">
+                </div>
+            </div>
         </div>
     </div>
     <div id="Products">
         <div class="Products_in">
             <div class="Products_content">
-                <img src="" alt="이미지를 찾을 수 없습니다.">
+                <img src="/srcs/images/prev.png" alt="이미지를 찾을 수 없습니다.">
                 <div class="Products_tit">
-                    <h3><img src="" alt="Dong-A">Products</h3>
+                    <h3><img src="/srcs/images/title_donga.png" alt="Dong-A">&nbsp; Products</h3>
                     <ul>
-                <li>신제품</li>
-                <li>필기용품</li>
-                <li>마카용품</li>
-                <li>미술용품</li>
-                <li>TORU</li>
-                <li>특판상품</li>
+                        <li class="click">신제품</li>
+                        <li>필기용품</li>
+                        <li>마카용품</li>
+                        <li>미술용품</li>
+                        <li>TORU</li>
+                        <li>특판상품</li>
                     </ul>
                 </div>
-                <img src="" alt="이미지를 찾을 수 없습니다.">
+                <img src="/srcs/images/next.png" alt="이미지를 찾을 수 없습니다.">
             </div>
             <ul class="Products_img1">
                 <li>
-                    <img src="" alt="new"><p>민트연필</p>
+                    <div><img src="/srcs/images/new_icon.png" alt="new" class="new"></div>
+                    <p>Q노크</p>
                 </li>
                 <li>
-                    <img src="" alt="new"><p>클레이온도우</p>
+                    <div><img src="/srcs/images/new_icon.png" alt="new" class="new"></div>
+                    <p>Q노크</p>
                 </li>
                 <li>
-                    <img src="" alt="new"><p>슬림유성매직</p>
+                    <div><img src="/srcs/images/new_icon.png" alt="new" class="new"></div>
+                    <p>Q노크</p>
                 </li>
                 <li>
-                    <img src="" alt="new"><p>Q노크</p>
+                    <div><img src="/srcs/images/new_icon.png" alt="new" class="new"></div>
+                    <p>Q노크</p>
                 </li>
             </ul>
         </div>
