[fix] html, news_notice

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <p>윤리 강령  Code of Ethics &nbsp; 동아연필주식회사는 산업인의 사면에 투철하고 능률과 창의로써 저마다의 소질을 계발하는</p>
                     <p class="day">2020-08-05</p>
                 </li>
-                <li>
+                <li class="del_margin">
                     <img src="/src/images/news_img.png" alt="이미지를 찾을 수 없습니다.">
                     <h6>고객센터 전화번호 변경안내</h6>
                     <p>동아연필 고객상담 전화번호가 아래와 같이 변경되었습니다. 기본 080-6000-625 --->> 변경 1544-9825</p>
@@ -176,14 +176,16 @@
             </ul>
         </div>
     </div>
-    <div id="main_side2">
-        <img src="" alt="이미지를 찾을 수 없습니다.">
-        <div class="side2_tit">
-            <h3><img src="" alt="Dong-A">Character</h3>
-            <p>동아의 다양한 캐릭터들을 소개합니다.</p>
-            <div>캐릭터 친구들 만나러가기</div>
+    <div id="main_side2">                            
+        <div class="main_side2_in">
+            <img src="/src/images/character_img01.png" alt="이미지를 찾을 수 없습니다." class="left_img">
+            <div class="side2_tit">
+                <h3><img src="/src/images/title_donga.png" alt="Dong-A"> Character</h3>
+                <p>동아의 다양한 캐릭터들을 소개합니다.</p>
+                <div><span>캐릭터 친구들 만나러가기</span></div>
+            </div>
+            <img src="/src/images/character_img02.png" alt="이미지를 찾을 수 없습니다." class="right_img">
         </div>
-        <img src="" alt="이미지를 찾을 수 없습니다.">
     </div>
     <div id="Special_Guide">
         <div class="Special_Guide_in">
