--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/src/styles/news_notice.css">
     <link rel="stylesheet" href="/src/styles/mainCont_side.css">
     <link rel="stylesheet" href="/src/styles/footer.css">
+    <link rel="stylesheet" href="/src/styles/special_guide.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -190,71 +191,74 @@
     <div id="Special_Guide">
         <div class="Special_Guide_in">
             <div class="Special_Guide_content">
-                <img src="" alt="prev">
+                <img src="/src/images/prev.png" alt="prev">
                 <div class="Special_Guide_tit">
-                    <h3>Special <p>Guide</p></h3>
+                    <h3>Special <span>Guide</span></h3>
                     <p>유용한 정보와 풍부한 자료 재밌는 이벤트가 함께 합니다.</p>
                 </div>
-                <img src="" alt="next">
+                <img src="/src/images/next.png" alt="next">
             </div>
             <ul class="Products_img1">
                 <li>
-                    <img src="" alt="이미지를 찾을 수 없습니다.">
+                    <img src="/src/images/special_guide.jpg.png" alt="이미지를 찾을 수 없습니다.">
                 </li>
-                <li>
-                    <img src="" alt="이미지를 찾을 수 없습니다.">
+                <li class="special_margin_img">
+                    <img src="/src/images/special_guide.jpg.png" alt="이미지를 찾을 수 없습니다.">
                 </li>
-                <li>
-                    <img src="" alt="이미지를 찾을 수 없습니다.">
-                <li>
-                    <img src="" alt="이미지를 찾을 수 없습니다.">
+                <li class="special_del_img1">
+                    <img src="/src/images/special_guide.jpg.png" alt="이미지를 찾을 수 없습니다.">
+                </li>
+                <li class="special_del_img2">
+                    <img src="/src/images/special_guide.jpg.png" alt="이미지를 찾을 수 없습니다.">
                 </li>
             </ul>
         </div>
     </div>
     <div id="footer">
-        <div class="footer_nav">
-            <div class="footer_menu">
-                <ul>
-                    <li>동아연필소개</li>
-                    <li>오시는 길</li>
-                    <li>개인정보취급방침</li>
-                    <li>이메일무단수집거부</li>
-                </ul>
+        <div class="footer_in">
+            <div class="footer_nav">
+                <div class="footer_menu">
+                    <ul>
+                        <li>동아연필소개</li>
+                        <li>오시는 길</li>
+                        <li>개인정보취급방침</li>
+                        <li>이메일무단수집거부</li>
+                    </ul>
+                </div>
+                <div class="footer_sideBtn">
+                    <ul>
+                        <li><img src="" alt="instagram"></li>
+                        <li><img src="" alt="facebook"></li>
+                        <li><img src="" alt="penfan"></li>
+                        <li><img src="" alt="재미교실"></li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer_sideBtn">
-                <ul>
-                    <li><img src="" alt="instagram"></li>
-                    <li><img src="" alt="facebook"></li>
-                    <li><img src="" alt="penfan"></li>
-                    <li><img src="" alt="재미교실"></li>
-                </ul>
-            </div>
-        </div>
-        <div class="footer_main">
-            <img src="" alt="Dong-A">
-            <div class="footer_main_content">
-                <ul>
-                    <li><h6>동아연필(주)</h6></li>
-                    <li>대전시 대덕구 대전로 1331번길 350</li>
-                    <li>전화 : 1544-9825</li>
-                    <li>팩스 : 042-625-6104</li>
-                    <li>사업자등록번호 : 306-85-00278</li>
-                    <li>대표자 : 김학재</li>
-                </ul>
-                <ul>
-                    <li><h6>동아교재(주)</h6></li>
-                    <li>대전시 대덕구 대화로 52번길 154</li>
-                    <li>전화 : 1544-9825</li>
-                    <li>팩스 : 042-625-6543</li>
-                </ul>
-                <ul>
-                    <li><h6>서울사무소</h6></li>
-                    <li>서울특별시 강남구 언주로 601 파크랜드빌딩 4층(논형동 237-11)</li>
-                    <li>전화 : 1544-9825</li>
-                    <li>팩스 : 02-3443-6011/6012</li>
-                </ul>
-                <p>COPYRIGHTS © DONGAPEN. ALL RIGHTS RESERVED. <span>Design by Threeway</span></p>
+            <div class="footer_main">
+                <img src="" alt="Dong-A">
+                <div class="footer_main_content">
+                    <ul>
+                        <li><h6>동아연필(주)</h6></li>
+                        <li>대전시 대덕구 대전로 1331번길 350</li>
+                        <li>전화 : 1544-9825</li>
+                        <li>팩스 : 042-625-6104</li>
+                        <li>사업자등록번호 : 306-85-00278</li>
+                        <li>대표자 : 김학재</li>
+                    </ul>
+                    <ul>
+                        <li><h6>동아교재(주)</h6></li>
+                        <li>대전시 대덕구 대화로 52번길 154</li>
+                        <li>전화 : 1544-9825</li>
+                        <li>팩스 : 042-625-6543</li>
+                    </ul>
+                    <ul>
+                        <li><h6>서울사무소</h6></li>
+                        <li>서울특별시 강남구 언주로 601 파크랜드빌딩 4층(논형동 237-11)</li>
+                        <li>전화 : 1544-9825</li>
+                        <li>팩스 : 02-3443-6011/6012</li>
+                    </ul>
+                    <p>COPYRIGHTS © DONGAPEN. ALL RIGHTS RESERVED. <span>Design by Threeway</span></p>
+                </div>
             </div>
         </div>
     </div>
