[fix] html, products

--- a/index.html
+++ b/index.html
@@ -220,44 +220,51 @@
                 <div class="footer_menu">
                     <ul>
                         <li>동아연필소개</li>
-                        <li>오시는 길</li>
-                        <li>개인정보취급방침</li>
-                        <li>이메일무단수집거부</li>
+                        <li class="del_li">오시는 길</li>
+                        <li class="color">개인정보취급방침</li>
+                        <li class="del_margin">이메일무단수집거부</li>
                     </ul>
                 </div>
                 <div class="footer_sideBtn">
                     <ul>
-                        <li><img src="" alt="instagram"></li>
-                        <li><img src="" alt="facebook"></li>
-                        <li><img src="" alt="penfan"></li>
-                        <li><img src="" alt="재미교실"></li>
+                        <li><img src="/src/images/fSns_insta.png" alt="instagram"></li>
+                        <li><img src="/src/images/fSns_facebook.png" alt="facebook"></li>
+                        <li><span><img src="/src/images/fSns_cafe.png" alt="penfan"> &nbsp; 동아 Penfan</span></li>
+                        <li><span><img src="/src/images/fSns_cafe.png" alt="재미교실"> &nbsp; 토루의 재미교실</span></li>
                     </ul>
                 </div>
             </div>
+            <div class="footer_680">사업자정보확인<img src="/src/images/down.png" alt=""></div>
             <div class="footer_main">
-                <img src="" alt="Dong-A">
+                <img src="/src/images/foot_logo.gif" alt="Dong-A">
                 <div class="footer_main_content">
-                    <ul>
-                        <li><h6>동아연필(주)</h6></li>
-                        <li>대전시 대덕구 대전로 1331번길 350</li>
-                        <li>전화 : 1544-9825</li>
-                        <li>팩스 : 042-625-6104</li>
-                        <li>사업자등록번호 : 306-85-00278</li>
-                        <li>대표자 : 김학재</li>
-                    </ul>
-                    <ul>
-                        <li><h6>동아교재(주)</h6></li>
-                        <li>대전시 대덕구 대화로 52번길 154</li>
-                        <li>전화 : 1544-9825</li>
-                        <li>팩스 : 042-625-6543</li>
-                    </ul>
-                    <ul>
-                        <li><h6>서울사무소</h6></li>
-                        <li>서울특별시 강남구 언주로 601 파크랜드빌딩 4층(논형동 237-11)</li>
-                        <li>전화 : 1544-9825</li>
-                        <li>팩스 : 02-3443-6011/6012</li>
-                    </ul>
-                    <p>COPYRIGHTS © DONGAPEN. ALL RIGHTS RESERVED. <span>Design by Threeway</span></p>
+                    <div>
+                        <strong>동아연필(주)</strong>
+                        <ul>
+                            <li>대전시 대덕구 대전로 1331번길 350</li>
+                            <li>전화 : 1544-9825</li>
+                            <li>팩스 : 042-625-6104</li>
+                            <li>사업자등록번호 : 306-85-00278</li>
+                            <li>대표자 : 김학재</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <strong>동아교재(주)</strong>
+                        <ul>
+                            <li>대전시 대덕구 대화로 52번길 154</li>
+                            <li>전화 : 1544-9825</li>
+                            <li>팩스 : 042-625-6543</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <strong>서울사무소</strong>
+                        <ul>
+                            <li>서울특별시 강남구 언주로 601 파크랜드빌딩 4층(논형동 237-11)</li>
+                            <li>전화 : 1544-9825</li>
+                            <li>팩스 : 02-3443-6011/6012</li>
+                        </ul>
+                    </div>
+                    <p>COPYRIGHTS © DONGAPEN. ALL RIGHTS RESERVED. &nbsp; <span>Design by Threeway</span></p>
                 </div>
             </div>
         </div>
