--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/src/styles/mainCont_side.css">
     <link rel="stylesheet" href="/src/styles/footer.css">
     <link rel="stylesheet" href="/src/styles/special_guide.css">
+    <link rel="stylesheet" href="/src/styles/topBtn.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -269,5 +270,6 @@
             </div>
         </div>
     </div>
+    <span id="topBtn"><img src="/src/images/top_arrow.png" alt="top"></span>
 </body>
 </html>                
